--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".BattleActivity"></activity>
+        <activity android:name=".SwimmingActivity" />
+        <activity android:name=".RunningActivity" />
+        <activity android:name=".FlyingActivity" />
+        <activity android:name=".HomeScreen" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
